--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,5 @@ JMS_COUNTRY_ID=1
 CJY_USERNAME=your_username
 CJY_PASSWORD=your_password
 CJY_SOFT_ID=your_soft_id
+
+TOKEN_ENCRYPT_KEY=IfeHSSEVc-1wQrsW4buCvMmaIKGSoczY_pn7LupRDJU=
